--- a/hello.html
+++ b/hello.html
@@ -1,5 +1,10 @@
 <html>
-  <body>
-    <h1>Hello Extensions</h1>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Jacquarda+Bastarda+9&family=Kablammo&display=swap" rel="stylesheet">
+  </head>
+  <body style="font-family:'Kablammo';">
+    Do your spanish
   </body>
 </html>
